--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cs6262-pr1"]
 	path = cs6262-pr1
 	url = ../cs6262-pr1
+[submodule "cs6262-pr2"]
+	path = cs6262-pr2
+	url = ../cs6262-pr2
