--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "cs6262-pr4"]
 	path = cs6262-pr4
 	url = ../cs6262-pr4
+[submodule "cs6262-pr5"]
+	path = cs6262-pr5
+	url = ../cs6262-pr5
